--- a/plugins/dht/sensor-dht.service
+++ b/plugins/dht/sensor-dht.service
@@ -8,6 +8,8 @@ RuntimeDirectory=/var/run/sensors
 ExecStart=/usr/local/bin/sensor-dhtd
 StandardOutput=syslog
 StandardError=syslog
+Restart=always
+RestartSec=3
 
 [Install]
 WantedBy=multi-user.target
